@@ -1,4 +1,4 @@
-/* $Id: openssl-compat.c,v 1.10 2010/11/22 06:59:00 dtucker Exp $ */
+/* $Id: openssl-compat.c,v 1.11 2010/12/04 12:20:50 dtucker Exp $ */
 
 /*
  * Copyright (c) 2005 Darren Tucker <dtucker@zip.com.au>
@@ -18,10 +18,15 @@
 
 #include "includes.h"
 
+#include <stdarg.h>
+#include <string.h>
+
 #ifdef USE_OPENSSL_ENGINE
 # include <openssl/engine.h>
 # include <openssl/conf.h>
 #endif
+
+#include "log.h"
 
 #define SSH_DONT_OVERLOAD_OPENSSL_FUNCS
 #include "openssl-compat.h"
@@ -55,6 +60,63 @@ int
 ssh_EVP_DigestUpdate(EVP_MD_CTX *ctx, const void *d, unsigned int cnt)
 {
 	EVP_DigestUpdate(ctx, d, cnt);
+	return 1;
+}
+#endif
+
+#ifndef HAVE_BN_IS_PRIME_EX
+int
+BN_is_prime_ex(const BIGNUM *p, int nchecks, BN_CTX *ctx, void *cb)
+{
+	if (cb != NULL)
+		fatal("%s: callback args not supported", __func__);
+	return BN_is_prime(p, nchecks, NULL, ctx, NULL);
+}
+#endif
+
+#ifndef HAVE_RSA_GENERATE_KEY_EX
+int
+RSA_generate_key_ex(RSA *rsa, int bits, BIGNUM *bn_e, void *cb)
+{
+	RSA *new_rsa, tmp_rsa;
+	unsigned long e;
+
+	sleep(1);
+	if (cb != NULL)
+		fatal("%s: callback args not supported", __func__);
+	e = BN_get_word(bn_e);
+	if (e == 0xffffffffL)
+		fatal("%s: value of e too large", __func__);
+	new_rsa = RSA_generate_key(bits, e, NULL, NULL);
+	if (new_rsa == NULL)
+		return 0;
+	/* swap rsa/new_rsa then free new_rsa */
+	tmp_rsa = *rsa;
+	*rsa = *new_rsa;
+	*new_rsa = tmp_rsa;
+	RSA_free(new_rsa);
+	return 1;
+}
+#endif
+
+#ifndef HAVE_DSA_GENERATE_PARAMETERS_EX
+int
+DSA_generate_parameters_ex(DSA *dsa, int bits, const unsigned char *seed,
+    int seed_len, int *counter_ret, unsigned long *h_ret, void *cb)
+{
+	DSA *new_dsa, tmp_dsa;
+
+	if (cb != NULL)
+		fatal("%s: callback args not supported", __func__);
+	new_dsa = DSA_generate_parameters(bits, (unsigned char *)seed, seed_len,
+	    counter_ret, h_ret, NULL, NULL);
+	if (new_dsa == NULL)
+		return 0;
+	/* swap dsa/new_dsa then free new_dsa */
+	tmp_dsa = *dsa;
+	*dsa = *new_dsa;
+	*new_dsa = tmp_dsa;
+	DSA_free(new_dsa);
 	return 1;
 }
 #endif
